<resources>
    <string name="app_name">SmartSolutions</string>
    <string name="app_description">Save money and time with us. The best engineer group who can create the best and cheapest solutions for you.</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">email</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="password">password</string>
    <string name="password_hint">********</string>
    <string name="select_your_country">Select your country:</string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">LogOut</string>
    <string name="logout_question">Are you sure you want to log out from your SmartSolutions account?</string>
    <string name="location_delete_question">Are you sure you want to delete this location?</string>
    <string name="device_delete_question">Are you sure you want to delete this device?</string>
    <string name="add_location_double_check">Please double check your location, you can not edit it after!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="control">Control</string>
    <string name="solutions">Solutions</string>
    <string name="device_name">Device Name</string>
    <string name="garage_led_switch">Garage led switch</string>
    <string name="device_type">Device Type</string>
    <string name="device_code">Device Code</string>
    <string name="_2qf_lfe">2Qf$=^lfe</string>
    <string name="submit_new_device">Submit new device</string>
    <string name="location_name">Location Name</string>
    <string name="my_beautiful_house">My beautiful house</string>
    <string name="city">City</string>
    <string name="timisoara">Timisoara</string>
    <string name="street">Street</string>
    <string name="muresului">Muresului</string>
    <string name="number">Number</string>
    <string name="_1">1</string>
    <string name="submit_new_location">Submit new location</string>
    <string name="back_to_locations">Back to locations</string>
    <string name="intensity">%</string>
    <string name="submit_intensity">Submit intensity</string>
    <string name="loading">Loading…</string>
    <string name="back">Back</string>
    <string name="OPEN_WEATHER_MAP_API_KEY">"2cc7f28930a4f88e0891ffe97e04d918"</string>
    <string name="degrees">degrees</string>
    <string name="wind">wind</string>
    <string name="description">description</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="delete_device">Delete device</string>
    <string name="edit_device">Edit device</string>
    <string name="edit_location">Edit location</string>
    <string name="delete_location">Delete location</string>
    <string name="delete_word_preamble">Deleting </string>
    <string name="update">Update</string>
    <string name="submit_color">Submit color</string>
    <string name="pick_a_color">Pick a color</string>
    <string name="about">About</string>
    <string name="app">App</string>
    <string name="account">Account</string>
</resources>