<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:focusableInTouchMode="true"
    tools:context=".welcome.SingUpFragment">

    <TextView
        android:id="@+id/textDeviceName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/location_name"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/viewDeviceNameDivider"
        app:layout_constraintTop_toBottomOf="@id/backImageButton" />

    <EditText
        android:id="@+id/inputDeviceName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/my_beautiful_house"
        android:inputType="text"
        android:minHeight="35dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/viewDeviceNameDivider"
        app:layout_constraintStart_toStartOf="@id/viewDeviceNameDivider"
        app:layout_constraintTop_toBottomOf="@+id/textDeviceName"
        tools:ignore="Autofill" />

    <View
        android:id="@+id/viewDeviceNameDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/inputDeviceName" />

    <TextView
        android:id="@+id/textCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/city"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/viewCityDivider"
        app:layout_constraintTop_toTopOf="@id/viewDeviceNameDivider" />

    <EditText
        android:id="@+id/inputCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/timisoara"
        android:inputType="text"
        android:minHeight="35dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/viewCityDivider"
        app:layout_constraintStart_toStartOf="@id/viewCityDivider"
        app:layout_constraintTop_toBottomOf="@+id/textCity"
        tools:ignore="Autofill" />

    <View
        android:id="@+id/viewCityDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/inputCity" />

    <TextView
        android:id="@+id/textStreet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/street"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/viewCodeDivider"
        app:layout_constraintTop_toTopOf="@id/viewCityDivider" />

    <EditText
        android:id="@+id/inputStreet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/muresului"
        android:inputType="text"
        android:minHeight="35dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/viewCodeDivider"
        app:layout_constraintStart_toStartOf="@id/viewCodeDivider"
        app:layout_constraintTop_toBottomOf="@+id/textStreet"
        tools:ignore="Autofill" />

    <View
        android:id="@+id/viewCodeDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/inputStreet" />

    <TextView
        android:id="@+id/textNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/number"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/viewNumberDivider"
        app:layout_constraintTop_toTopOf="@id/viewCodeDivider" />

    <EditText
        android:id="@+id/inputNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/_1"
        android:inputType="number"
        android:minHeight="35dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/viewNumberDivider"
        app:layout_constraintStart_toStartOf="@id/viewNumberDivider"
        app:layout_constraintTop_toBottomOf="@+id/textNumber"
        tools:ignore="Autofill" />

    <View
        android:id="@+id/viewNumberDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/inputNumber" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@null"
        android:paddingHorizontal="32dp"
        android:text="@string/submit_new_location"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewNumberDivider" />

    <ImageButton
        android:id="@+id/backImageButton"
        android:layout_width="64dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/skin_back_button"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>