<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:focusableInTouchMode="true"
    tools:context=".devices.device_types.RelayFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundedbuttonback"
        android:backgroundTint="@null"
        android:paddingHorizontal="32dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/deleteDeviceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteDeviceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundedbutton_white_colored"
        android:backgroundTint="@null"
        android:paddingHorizontal="8dp"
        android:text="@string/delete_device"
        android:textAllCaps="false"
        android:textColor="@color/back_red"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editDeviceButton"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editDeviceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundedbutton_white_colored"
        android:backgroundTint="@null"
        android:paddingHorizontal="8dp"
        android:text="@string/edit_device"
        android:textAllCaps="false"
        android:textColor="@color/base_green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/deleteDeviceButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageOnOff"
        android:layout_width="wrap_content"
        android:layout_height="124dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_power_of"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>