<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:focusableInTouchMode="true"
    tools:context=".devices.device_types.IntensityFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundedbuttonback"
        android:backgroundTint="@null"
        android:paddingHorizontal="32dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/intensityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intensity"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/intensitySeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.xw.repo.BubbleSeekBar
        android:id="@+id/intensitySeekBar"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginHorizontal="24dp"
        app:bsb_second_track_color="@color/base_green"
        app:bsb_show_section_mark="true"
        app:bsb_show_section_text="true"
        app:bsb_show_thumb_text="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSubmitIntensity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@null"
        android:paddingHorizontal="32dp"
        android:text="@string/submit_intensity"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intensitySeekBar" />

</androidx.constraintlayout.widget.ConstraintLayout>